save gupshup id pass in .env file

--- a/base_site/.env
+++ b/base_site/.env
@@ -19,3 +19,7 @@ AWS_S3_REGION_NAME=us-east-2
 test_account_sid=ACc1850c4cded33db1f98cd2219826ef66
 test_auth_token=0ebe4b5681598dd871ac2e3239959957
 
+#Gupshup user&password
+user_id=2000142458
+password=vrgnLDKp
+
